--- a/GPTBenchmarks/Ressources/Tikz/tikz_res.tex
+++ b/GPTBenchmarks/Ressources/Tikz/tikz_res.tex
@@ -51,11 +51,13 @@ dog/.pic={
     .. controls ++(  0:20) and ++(315:20) .. ++( 40,64)
     .. controls ++(135:20) and ++( 45:20) .. ++(-80, 0)
     .. controls ++(225:20) and ++(180:20) .. cycle;
-  \fill [Red] (56, 0) circle [radius=20]; % Changed the eye color to Red
+  \fill [BlueGrey900] (56, 0) circle [radius=20];
   \fill [fill color] (-8,-112)
   -- ++(16,0) -- ++(0,-32) arc (180:360:24)
   arc (180:0:8) arc (360:180:40);
 }
+\fill [blue] (48, -96) circle [radius=8]; % Change the color of the eyes to blue
+\fill [blue] (-48, -96) circle [radius=8]; % Change the color of the eyes to blue
 \end{scope}}
 }
 \begin{document}
