--- a/GPTBenchmarks/Ressources/Tikz/onlydog_modified.tex
+++ b/GPTBenchmarks/Ressources/Tikz/onlydog_modified.tex
@@ -28,31 +28,31 @@ dog/.pic={
 \begin{scope}[x=3cm/480,y=3cm/480]
 \useasboundingbox (-256, -256) (256, 256);
 \reflect[split=Brown400 and Brown500]{
-  \fill [fill color] (0,-64) ellipse [x radius=160, y radius=144]; %These parts refer to the cheeks of the illustrated dog.
-  \fill [fill color] (0, 32) ellipse [x radius=128, y radius=112]; %These parts refer to the area covering the dog's forehead and eyes, resembling a mask or a pair of oversized glasses.
-  \fill [fill color] (32,96) %These parts refer to the ears of the illustrated dog.
+  \fill [fill color] (0,-64) ellipse [x radius=160, y radius=144]; 
+  \fill [fill color] (0, 32) ellipse [x radius=128, y radius=112]; 
+  \fill [fill color] (32,96) 
   .. controls ++( 75:128) and ++(105:128) .. ++(192,  0)
   .. controls ++(285: 96) and ++(285: 96) .. ++(-80,-32)
   .. controls ++(105: 64) and ++( 75: 32) .. cycle;
 }
 \reflect[split={Grey100 and Grey200}]{
   \clip (0,-64) ellipse [x radius=160, y radius=144];
-  \fill [fill color](0,-224) %These parts refer to the dog's nose and mouth.
+  \fill [fill color](0,-224) 
     .. controls ++(  0:64) and ++(270:64) .. ++(96,64)
     .. controls ++( 90:64) and ++(270:64) .. ++(-96,192)
     .. controls ++(270:64) and ++( 90:64) .. ++(-96,-192)
     .. controls ++(270:64) and ++(180:64) .. cycle;
 }
 \reflect[split={Pink100 and Pink200}]{
-  \fill [fill color](0,-192) ellipse [x radius=28, y radius=32]; %These parts refer to the dog's tongue.
+  \fill [fill color](0,-192) ellipse [x radius=28, y radius=32]; 
 }
 \reflect[split={BlueGrey800 and BlueGrey900}]{
-  \fill [fill color](0,-144) %These parts refer to the dog's nose.
+  \fill [fill color](0,-144) 
     .. controls ++(  0:20) and ++(315:20) .. ++( 40,64)
     .. controls ++(135:20) and ++( 45:20) .. ++(-80, 0)
     .. controls ++(225:20) and ++(180:20) .. cycle;
-  \fill [Red] (56, 0) circle [radius=20]; %These parts refer to the eyes of the illustrated dog.
-  \fill [fill color] (-8,-112) %These parts refer to the dog's tongue.
+  \fill [Red] (56, 0) circle [radius=20]; 
+  \fill [fill color] (-8,-112) 
   -- ++(16,0) -- ++(0,-32) arc (180:360:24)
   arc (180:0:8) arc (360:180:40);
 }
@@ -64,7 +64,7 @@ dog/.pic={
   in {dog}{
 \pgfmathrandomitem\materialColor{material}
 \scoped[shift={(\x,\y)}]{
-\fill [fill=\materialColor50] circle [radius=2]; %These parts refer to the background circle surrounding the illustration of a dog's face.
+\fill [fill=\materialColor50] circle [radius=2];
 \pic {\animal};
 \node [below]at (0, -2) {\ttfamily\animal};
 }}
