fixed errors in chatgptcaller.py

--- a/GPTBenchmarks/Ressources/Tikz/tikz_res.tex
+++ b/GPTBenchmarks/Ressources/Tikz/tikz_res.tex
@@ -52,12 +52,10 @@ dog/.pic={
     .. controls ++(135:20) and ++( 45:20) .. ++(-80, 0)
     .. controls ++(225:20) and ++(180:20) .. cycle;
   \fill [BlueGrey900] (56, 0) circle [radius=20];
-  \fill [fill color] (-8,-112)
+  \fill [fill=Blue] (-8,-112)  % Changed the color of the eyes to blue
   -- ++(16,0) -- ++(0,-32) arc (180:360:24)
   arc (180:0:8) arc (360:180:40);
 }
-\fill [blue] (48, -96) circle [radius=8]; % Change the color of the eyes to blue
-\fill [blue] (-48, -96) circle [radius=8]; % Change the color of the eyes to blue
 \end{scope}}
 }
 \begin{document}
